syntax = "proto3";

package scow;
service ScowKeyValue {
    rpc Status (StatusRequest) returns (StatusReply);
    rpc Get (GetRequest) returns (GetReply);
    rpc Set (SetRequest) returns (SetReply);
}

message GetRequest {
    string key = 1;
}

message GetReply {
    string value = 1;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetReply {
    bool success = 1;
}

message StatusRequest {
}

message StatusReply {
    string status = 1;
}